--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img alt="dog image" src="https://images.app.goo.gl/PWfEXMT7toccFFsA6"></img>
     <script type="text/javascript" src="./script.js">
 </script>
 
