--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img alt="dog image" src="https://images.app.goo.gl/PWfEXMT7toccFFsA6"></img>
+	<img alt="dog image" src="https://www.dreamstime.com/stock-image-dog-welcome-home-image26629661"></img>
     <script type="text/javascript" src="./script.js">
 </script>
 
