--- a/main.html
+++ b/main.html
@@ -8,8 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img alt="dog image" src="https://www.dreamstime.com/stock-image-dog-welcome-home-image26629661"></img>
-    <script type="text/javascript" src="./script.js">
+	<img  src="https://www.dreamstime.com/stock-image-dog-welcome-home-image26629661"
+		  alt="Dog image that show that i love my dog really form my heart."
+	
+		>
+    
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
