--- a/main.html
+++ b/main.html
@@ -8,10 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img  src="https://www.dreamstime.com/stock-image-dog-welcome-home-image26629661"
-		  alt="Dog image that show that i love my dog really form my heart."
-	
-		>
+	<img  src="https://upload.wikimedia.org/wikipedia/commons/1/18/Dog_Breeds.jpg"
+		  alt="Dog image that show that i love my dog really form my heart.">
     
 	<script type="text/javascript" src="./script.js">
 </script>
